--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,27 +1,19 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
-- main
+  branches:
+    include:
+    - main
 
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
+pr: none
 
 pool:
-  name: 'Default' 
+  name: Default
+  demands:
+  - Agent.Name -equals AgentTokeenCP4   # força cair no seu self-hosted
 
 stages:
 - stage: Build
-  displayName: Build image
   jobs:
   - job: Build
-    displayName: Build
-    pool:
-      name: 'Default'
     steps:
     - task: Docker@2
       displayName: Build an image
@@ -29,4 +21,4 @@ stages:
         command: build
         dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
         tags: |
-          $(tag)
+          $(Build.BuildId)
