--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,9 +1,8 @@
-# Build + Push (ACR) + Deploy (ACI) — simples
 trigger:
 - main
 
 pool:
-  name: 'Default'   # seu agente self-hosted
+  name: 'Default'   # seu agente privado
 
 variables:
   tag: '$(Build.BuildId)'
@@ -13,42 +12,38 @@ stages:
   jobs:
   - job: DoAll
     steps:
-    # 1) Login no ACR
     - script: |
         docker login $(acrServer) -u $(acrName) -p $(acrPassword)
       displayName: 'Docker login no ACR'
 
-    # 2) Build + Tag + Push
     - script: |
         IMAGE="$(acrServer)/fiap/$(appName):$(tag)"
         echo "IMAGE=$IMAGE"
         docker build -f $(Build.SourcesDirectory)/Dockerfile -t "$IMAGE" $(Build.SourcesDirectory)
         docker push "$IMAGE"
-      displayName: 'Build e Push da imagem'
+      displayName: 'Build e Push'
 
-    # 3) Deploy no ACI (Azure CLI)
-    - task: AzureCLI@2
-      inputs:
-        azureSubscription: 'SC-Azure'   # seu Service Connection
-        scriptType: bash
-        scriptLocation: inlineScript
-        inlineScript: |
-          set -e
-          IMAGE="$(acrServer)/fiap/$(appName):$(tag)"
-          echo "Deploying IMAGE=$IMAGE"
+    # --- SIMPLES: sem Service Connection ---
+    - script: |
+        set -e
+        az version
+        az login --service-principal -u "$(spAppId)" -p "$(spPassword)" --tenant "$(spTenant)"
+        az account set --subscription "$(subscriptionId)"
 
-          # remove o anterior se existir (ignora erro)
-          az container delete -g $(resourceGroup) -n $(appName) --yes || true
+        IMAGE="$(acrServer)/fiap/$(appName):$(tag)"
+        echo "Deploying IMAGE=$IMAGE"
 
-          az container create \
-            -g $(resourceGroup) \
-            -n $(appName) \
-            --image "$IMAGE" \
-            --registry-login-server "$(acrServer)" \
-            --registry-username "$(acrName)" \
-            --registry-password "$(acrPassword)" \
-            --cpu 1 --memory 1 \
-            --ports 8080 \
-            --ip-address Public \
-            --dns-name-label "$(appName)"
-      displayName: 'Deploy no Azure Container Instances'
+        az container delete -g "$(resourceGroup)" -n "$(appName)" --yes || true
+
+        az container create \
+          -g "$(resourceGroup)" \
+          -n "$(appName)" \
+          --image "$IMAGE" \
+          --registry-login-server "$(acrServer)" \
+          --registry-username "$(acrName)" \
+          --registry-password "$(acrPassword)" \
+          --cpu 1 --memory 1 \
+          --ports 8080 \
+          --ip-address Public \
+          --dns-name-label "$(appName)"
+      displayName: 'Deploy no ACI (az login via SP)'
